refactor: fix some styling issues and change content to yaml files

--- a/src/content/global.yaml
+++ b/src/content/global.yaml
@@ -23,7 +23,7 @@ header:
 footer:
   columns:
     - content: []
-    - title: Test
+    - title: Tyto
       content:
         - type: link
           data:
