--- a/src/content/features.yaml
+++ b/src/content/features.yaml
@@ -6,6 +6,12 @@ layout:
     title: Hero high impact 222
     actions: []
 
+  - type: content
+    columns:
+      - content: Column 1
+      - content: Column 2
+      - content: Column 3
+
   - type: featureBox
     media:
       src: /assets/images/hero-background.png
