feat: allow providing colors/classNames for block sections

--- a/src/content/features.yaml
+++ b/src/content/features.yaml
@@ -3,7 +3,7 @@ layout:
     variant: highImpact
     media:
       src: /assets/images/hero-background.png
-    title: Hero high impact 222
+    title: Features
     actions: []
 
   - type: content
