--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.16",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "remeda": "^2.19.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
