--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
+    "change-case": "^5.4.4",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "next": "15.1.4",
