--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
     "change-case": "^5.4.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.473.0",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rehype-react": "^8.0.0",
