--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-react": "^8.0.0",
     "rehype-sanitize": "^6.0.0",
-    "rehype-stringify": "^10.0.1",
+    "rehype-slug": "^6.0.0",
+    "remark-flexible-toc": "^1.1.1",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "remark-parse": "^11.0.0",
