--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -45,6 +46,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/unist": "^3.0.3",
+    "copy-webpack-plugin": "^12.0.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "file-loader": "^6.2.0",
