--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "change-case": "^5.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.473.0",
     "next": "15.1.4",
