feat: add markdown support for content options from yaml

--- a/src/content/examples.yaml
+++ b/src/content/examples.yaml
@@ -11,7 +11,7 @@ layout:
     media:
       src: /assets/images/hero-background.png
     title: Example Components
-    subtitle: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+    subtitle: Lorem Ipsum is simply dummy text of the _printing and typesetting industry_. **Lorem Ipsum** has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
     actions:
       - type: button
         variant: outline
