--- a/src/content/global.yaml
+++ b/src/content/global.yaml
@@ -79,4 +79,4 @@ footer:
           href: /legal/email-disclaimer
     - content: []
   bottomSection:
-    content: © Copyright 2016 Tyto - All Rights Reserved · An IRJ.io site. · Privacy Policy
+    content: © Copyright 2016 Tyto - All Rights Reserved · An [IRJ.io](https://www.irj.io) site. · [Privacy Policy](/legal/privacy)
