--- a/src/content/pricing.yaml
+++ b/src/content/pricing.yaml
@@ -120,3 +120,5 @@ layout:
       - src: /assets/images/client-logos/ty-mit.webp
       - src: /assets/images/client-logos/ty-domaindedeux.webp
       - src: /assets/images/client-logos/ty-yourcompany.webp
+    section:
+      className: bg-white
