feat: allow specifying a placeholder for media fields

--- a/src/content/examples.yaml
+++ b/src/content/examples.yaml
@@ -92,6 +92,20 @@ layout:
     section:
       className: bg-surface
 
+  - type: featureBox
+    media:
+      src: placeholder
+    title: Example of using placeholder media
+    content: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    action:
+      type: button
+      color: primary
+      label: See It In Action
+      size: lg
+    reverse: true
+    section:
+      className: bg-surface
+
   - type: contactForm
     title: The ContactForm block
 
