fix: issues with placeholder images during build

--- a/src/content/examples.yaml
+++ b/src/content/examples.yaml
@@ -130,21 +130,21 @@ layout:
       - content:
           type: testimonial
           media:
-            src: https://placehold.co/192x192
+            src: placeholder:192x192
           title: Alex Nguyen
           subtitle: Marketing Specialist
           content: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vel dolor quis tortor blandit feugiat ut vitae turpis.
       - content:
           type: testimonial
           media:
-            src: https://placehold.co/192x192
+            src: placeholder:192x192
           title: Alex Nguyen
           subtitle: Marketing Specialist
           content: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vel dolor quis tortor blandit feugiat ut vitae turpis.
       - content:
           type: testimonial
           media:
-            src: https://placehold.co/192x192
+            src: placeholder:192x192
           title: Alex Nguyen
           subtitle: Marketing Specialist
           content: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vel dolor quis tortor blandit feugiat ut vitae turpis.
